// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AdaptivityElementQuestionSelection should render (every required combination) 1`] = `
<div>
  <div
    class="grid w-full gap-4 px-2 py-2"
  >
    <div
      class="flex w-full items-center gap-4"
    >
      <div
        class=""
      >
        <button
          class="col-span-2 w-full md:col-span-1 px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
          data-testid="adaptivity-question-0"
          title="questionToolTip"
        >
          <div
            class="grid h-full w-full grid-cols-5 items-center"
          >
            <div
              class="flex h-full items-center"
            >
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                data-testid="adaptivity-star-empty"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt=""
                class="w-4 h-4 md:w-6 md:h-6"
                data-testid="adaptivity-star-medium"
                src="diffculties-adaptivity-medium-required-solved.svg"
              />
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                data-testid="adaptivity-star-empty"
                src="diffculties-adaptivity-placeholder.svg"
              />
            </div>
            <p
              class="col-span-3 flex justify-center px-4 text-start text-sm"
            >
              normal
               
            </p>
            <div
              class="flex items-center justify-end pr-2"
            >
              <img
                alt=""
                class="h-5 md:h-7"
                data-testid="adaptivity-star-required-completed-0"
                src="check-solution.svg"
                title="legendTaskRequiredSolved"
              />
            </div>
          </div>
        </button>
      </div>
      <div
        class="flex h-full flex-row md:gap-4"
      />
    </div>
    <div
      class="flex w-full items-center gap-4"
    >
      <div
        class=""
      >
        <button
          class="col-span-2 w-full md:col-span-1 px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
          data-testid="adaptivity-question-0"
          title="questionToolTip"
        >
          <div
            class="grid h-full w-full grid-cols-5 items-center"
          >
            <div
              class="flex h-full items-center"
            >
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                data-testid="adaptivity-star-empty"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                data-testid="adaptivity-star-empty"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt=""
                class="w-4 h-4 md:w-6 md:h-6"
                data-testid="adaptivity-star-hard"
                src="diffculties-adaptivity-hard-required-tried.svg"
              />
            </div>
            <p
              class="col-span-3 flex justify-center px-4 text-start text-sm"
            >
              hard
               
            </p>
            <div
              class="flex items-center justify-end pr-2"
            >
              <img
                alt=""
                class="h-5 md:h-7"
                data-testid="adaptivity-star-required-notcompleted-0"
                src="required.svg"
                title="legendTaskRequired"
              />
            </div>
          </div>
        </button>
      </div>
      <div
        class="flex h-full flex-row md:gap-4"
      />
    </div>
  </div>
</div>
`;

exports[`AdaptivityElementQuestionSelection should render (with all difficulties) 1`] = `
<div>
  <div
    class="grid w-full gap-4 px-2 py-2"
  >
    <div
      class="flex w-full items-center gap-4"
    >
      <div
        class=""
      >
        <button
          class="col-span-2 w-full md:col-span-1 px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
          data-testid="adaptivity-question-0"
          title="questionToolTip"
        >
          <div
            class="grid h-full w-full grid-cols-5 items-center"
          >
            <div
              class="flex h-full items-center"
            >
              <img
                alt=""
                class="w-4 h-4 md:w-6 md:h-6"
                data-testid="adaptivity-star-easy"
                src="diffculties-adaptivity-easy-unsolved-icon.svg"
              />
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                data-testid="adaptivity-star-empty"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                data-testid="adaptivity-star-empty"
                src="diffculties-adaptivity-placeholder.svg"
              />
            </div>
            <p
              class="col-span-3 flex justify-center px-4 text-start text-sm"
            >
              easy
               
            </p>
            <div
              class="flex items-center justify-end pr-2"
            >
              <div
                class="w-16"
              />
            </div>
          </div>
        </button>
      </div>
      <div
        class="flex h-full flex-row md:gap-4"
      />
    </div>
    <div
      class="flex w-full items-center gap-4"
    >
      <div
        class=""
      >
        <button
          class="col-span-2 w-full md:col-span-1 px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
          data-testid="adaptivity-question-0"
          title="questionToolTip"
        >
          <div
            class="grid h-full w-full grid-cols-5 items-center"
          >
            <div
              class="flex h-full items-center"
            >
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                data-testid="adaptivity-star-empty"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt=""
                class="w-4 h-4 md:w-6 md:h-6"
                data-testid="adaptivity-star-medium"
                src="diffculties-adaptivity-medium-solved.svg"
              />
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                data-testid="adaptivity-star-empty"
                src="diffculties-adaptivity-placeholder.svg"
              />
            </div>
            <p
              class="col-span-3 flex justify-center px-4 text-start text-sm"
            >
              normal
               
            </p>
            <div
              class="flex items-center justify-end pr-2"
            >
              <div
                class="w-16"
              />
            </div>
          </div>
        </button>
      </div>
      <div
        class="flex h-full flex-row md:gap-4"
      >
        <div
          class=""
        >
          <button
            class="h-full w-full px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
            data-testid="adaptivity-question-hint-0"
            title="hintToolTip"
          >
            <p
              class="text-sm"
            >
              hintButton
            </p>
          </button>
        </div>
      </div>
    </div>
    <div
      class="flex w-full items-center gap-4"
    >
      <div
        class=""
      >
        <button
          class="col-span-2 w-full md:col-span-1 px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
          data-testid="adaptivity-question-0"
          title="questionToolTip"
        >
          <div
            class="grid h-full w-full grid-cols-5 items-center"
          >
            <div
              class="flex h-full items-center"
            >
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                data-testid="adaptivity-star-empty"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt="Platzhalter-Icon"
                class="w-4 h-4 md:w-6 md:h-6 opacity-60"
                data-testid="adaptivity-star-empty"
                src="diffculties-adaptivity-placeholder.svg"
              />
              <img
                alt=""
                class="w-4 h-4 md:w-6 md:h-6"
                data-testid="adaptivity-star-hard"
                src="diffculties-adaptivity-hard-tried.svg"
              />
            </div>
            <p
              class="col-span-3 flex justify-center px-4 text-start text-sm"
            >
              hard
               
            </p>
            <div
              class="flex items-center justify-end pr-2"
            >
              <div
                class="w-16"
              />
            </div>
          </div>
        </button>
      </div>
      <div
        class="flex h-full flex-row md:gap-4"
      >
        <div
          class=""
        >
          <button
            class="h-full w-full px-2 py-1 justify-center flex items-center text-sm rounded-lg hover:cursor-pointer lg:text-xl transition ease-in-out duration-75 active:translate-x-[1px] active:translate-y-[1px] active:border-b-2 active:border-r-2 active:border-transparent text-adlerdarkblue font-regular border-b-2 border-r-2 border-adlerdarkblue overflow-hidden box-border cursor-pointer bg-buttonbgblue landscape:hover:bg-adleryellow active:bg-adleryellow"
            data-testid="adaptivity-question-hint-0"
            title="hintToolTip"
          >
            <p
              class="text-sm"
            >
              hintButton
            </p>
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
